--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Sudoku Solving Robot : ">
+    <meta name="description" content="Robô Solucionador de Sudoku : ">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Sudoku Solving Robot</title>
+    <title>Robô Solucionador de Sudoku</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/thiagozf/sudokurobot">View on GitHub</a>
 
-          <h1 id="project_title">Sudoku Solving Robot</h1>
+          <h1 id="project_title">Robô Solucionador de Sudoku</h1>
           <h2 id="project_tagline"></h2>
 
             <section id="downloads">
@@ -32,36 +32,28 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="resumo" class="anchor" href="#resumo" aria-hidden="true"><span class="octicon octicon-link"></span></a>Resumo</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you're using GitHub for Mac or GitHub for Windows, simply sync your repository and you'll see the new branch.</p>
+<p>Esta página apresenta o projeto de um robô, construído exclusivamente com peças de LEGO, capaz de solucionar jogos de Sudoku escritos em papel. Trata-se de um manipulador articulado de topologia paralela, controlado por um sistema de visão de máquina. O projeto visa introduzir princípios, modelos e aplicações dos sistemas de visão. O processo executado pelo robô inicia-se com a captura de uma imagem do seu espaço de trabalho, utilizando-se de uma webcam. A imagem capturada é então analisada pelo sistema de visão, que identifica o jogo, interpreta-o e o soluciona em memória. Finalmente, a solução é escrita pelo robô, que utiliza-se de uma caneta acoplada ao seu elemento terminal para realizar esta tarefa. O robô foi construído como parte do trabalho de conclusão de curso do autor no curso de Engenharia de Computação pela Universidade Federal de Santa Catarina (UFSC).</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>O sistema de visão foi desenvolvido com o MATLAB e pode ser encontrado no repositório do GitHub. O projeto CAD do robô também foi disponibilizado no repositório.</p>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="créditos" class="anchor" href="#cr%C3%A9ditos" aria-hidden="true"><span class="octicon octicon-link"></span></a>Créditos</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>O projeto mecânico do robô foi baseado no robô ev3-print3rbot, desenvolvido por <a href="https://github.com/cavenel" class="user-mention">@cavenel</a>.</p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="contato" class="anchor" href="#contato" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contato</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p>Thiago Zanivan Felisberto (<a href="https://github.com/thiagozf" class="user-mention">@thiagozf</a>): <a href="mailto:thiagozanivan@hotmail.com">thiagozanivan@hotmail.com</a></p>
       </section>
     </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Sudoku Solving Robot maintained by <a href="https://github.com/thiagozf">thiagozf</a></p>
+        <p class="copyright">Robô Solucionador de Sudoku maintained by <a href="https://github.com/thiagozf">thiagozf</a></p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
