Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 
 <p>Esta página apresenta o projeto de um robô, construído exclusivamente com peças de LEGO, capaz de solucionar jogos de Sudoku escritos em papel. Trata-se de um manipulador articulado de topologia paralela, controlado por um sistema de visão de máquina. O projeto visa introduzir princípios, modelos e aplicações dos sistemas de visão. O processo executado pelo robô inicia-se com a captura de uma imagem do seu espaço de trabalho, utilizando-se de uma webcam. A imagem capturada é então analisada pelo sistema de visão, que identifica o jogo, interpreta-o e o soluciona em memória. Finalmente, a solução é escrita pelo robô, que utiliza-se de uma caneta acoplada ao seu elemento terminal para realizar esta tarefa. O robô foi construído como parte do trabalho de conclusão de curso do autor no curso de Engenharia de Computação pela Universidade Federal de Santa Catarina (UFSC).</p>
 
-<p>O sistema de visão foi desenvolvido com o MATLAB e pode ser encontrado no repositório do GitHub. O projeto CAD do robô também foi disponibilizado no repositório.</p>
+<p>O sistema de visão foi desenvolvido com o MATLAB e pode ser encontrado no repositório do GitHub (<a href="https://github.com/thiagozf/sudokurobot">https://github.com/thiagozf/sudokurobot</a>). O projeto CAD do robô também foi disponibilizado no repositório.</p>
+
+<p><img src="https://lh4.googleusercontent.com/wDAJ1JfKNkbR_L3Zuq5h3rxhTuQh391cTZU6e9UM9X1cAdaR1cePFqye1yIYyExpYWyn2l4lo1VId7U=w1342-h523-rw" alt="Robô solucionador de Sudoku"></p>
 
 <h3>
 <a id="créditos" class="anchor" href="#cr%C3%A9ditos" aria-hidden="true"><span class="octicon octicon-link"></span></a>Créditos</h3>
